--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,88 +1,134 @@
-% Artykuł w recenzowanym czasopiśmie.
-@article{szczypiorski2015,
-    author    = {Szczypiorski, K. and Janicki, A. and Wendzel, S},
-    title     = {{T}he {G}ood, {T}he {B}ad {A}nd {T}he {U}gly: {E}valuation of {W}i-{F}i {S}teganography},
-    journal   = {Journal of Communications},
-    volume    = {10},
-    number    = {10},
-    pages     = {747--752},
-    publisher = {Journal of Communications (JCM)},
-    year      = {2015}
+% [1] Carr, Robert; Dan Shafer (1991). The power of PenPoint. Reading, Mass.:
+% Addison Wesley Pub. Co. ISBN 0-201-57763-1.
+@book{carr1991,
+    author    = {Robert Carr and Dan Shafer},
+    title     = {The power of PenPoint},
+    publisher = {Addison-Wesley Pub. Co.},
+    year      = {1991},
+    isbn      = {0-201-57763-1},
 }
 
-% Książka.
-@book{goossens93,
-    author    = {Michel Goossens and Frank Mittelbach and Alexander Samarin},
-    title     = {The LaTeX Companion},
-    publisher = {Addison-Wesley},
-    address   = {Reading, Massachusetts},
-    year      = {1993}
+% [2] Hohl, Fritz “NCR 3125”, Rare & Old Computers 29 May 2014.
+% https://randoc.wordpress.com/2014/05/29/ncr-3125/ https://archive.ph/wip/3OR5N
+@online{hohl2014,
+    author       = {Fritz Hohl},
+    title        = {NCR 3125},
+    year         = {2014},
+    month        = {5},
+    day          = {29},
+    url          = {randoc.wordpress.com/2014/05/29/ncr-3125/},
 }
 
-% Fragment książki (np. zakres stron).
-@inbook{wang97,
-    author    = {Hao Wang},
-    title     = {A Logical Journey: From G{\"o}del to Philosophy.},
-    publisher = {A Bradford Book},
-    pages     = {316},
-    year      = {1997}
+% [3] McDonald, Damian “'System 3125' tablet computer with accessories” May 2011
+% https://collection.maas.museum/object/416483 https://archive.ph/wip/S5wUv
+@online{mcdonald2011,
+    author       = {Damian McDonald},
+    title        = {System 3125' tablet computer with accessories},
+    year         = {2011},
+    month        = {5},
+    url          = {collection.maas.museum/object/416483}
 }
 
-% Fragment książki (np. esej), posiadający własny tytuł.
-@incollection{goedel95,
-    author    = {Kurt G{\"o}del},
-    title     = {Texts relating to the ontological proof},
-    booktitle = {Unpublished Essays and Lectures},
-    publisher = {Oxford University Press},
-    pages     = {429--437},
-    year      = {1995}
+% [4] Stengel, Steven “NCR-3125”, Steve's Old Computer Museum
+% https://oldcomputers.net/ncr-3125.html https://archive.ph/anzej
+@online{stengel,
+    author       = {Steven Stengel},
+    title        = {NCR-3125},
+    url          = {oldcomputers.net/ncr-3125.html}
 }
 
-% Publikacja konferencyjna.
-@inproceedings{benzmuller2014,
-    author       = {{Ch}. Benzmuller and B. W. Paleo},
-    title        = {Automating {G\"o}del’s {O}ntological {P}roof of {G}od’s {E}xistence with {H}igher-order {A}utomated {T}heorem {P}rovers},
-    booktitle    = {European	Conference on Artificial Intelligence},
-    publisher    = {IOS Press},
-    howpublished = {Dostęp zdalny (10.04.2019): \url{http://page.mi.fu-berlin.de/cbenzmueller/papers/C40.pdf}},
-    year         = {2014}
+% [8] Hoeven, Jeffrey van der; Lohman, Bram; Verdegem, Remco (11 December 2007).
+% "Emulation for Digital Preservation in Practice: The Results".
+% International Journal of Digital Curation.
+@article{hoeven2007,
+    author       = {Jeffrey van der Hoeven and Bram Lohman and Remco Verdegem},
+    title        = {
+        Emulation for Digital Preservation in Practice: The Results
+    },
+    journal      = {International Journal of Digital Curation},
+    year         = {2007},
+    month        = {12},
+    day          = {11},
 }
 
-% Raport techniczny.
-@techreport{duqu2011,
-    author      = {Bencsáth, B. and Pék, G. and Buttyán, L. and Félegyházi M.},
-    title       = {{D}uqu: {A} {S}tuxnet-like malware found in the wild},
-    institution = {Laboratory of Cryptography and System Security, Hungary},
-    year        = {2011}
+% [10] Brown, Bruce “Pen Operating Systems” PC Mag, 12 Oct 1993, p.: 172.
+% https://books.google.pl/books?id=3YYkmZlpAuoC
+@article{brown1993,
+    author       = {Bruce Brown},
+    title        = {Pen Operating Systems},
+    year         = {1993},
+    month        = {10},
+    day          = {12},
+    pages        = {172},
 }
 
-% Specyfikacja techniczna.
-@manual{shs2015,
-    title        = {{FIPS} 180-4: {S}ecure {H}ash {S}tandard ({SHS})},
-    howpublished = {Dostęp zdalny (13.03.2019): \url{https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf}},
-    year         = {2015}
+% [9] Brown, Bruce “Pen Software” PC Mag, 10 Nov 1992, pp.: 202-203.
+% https://books.google.pl/books?id=18wFKrkDdM0C
+@article{brown1992,
+    author       = {Bruce Brown},
+    title        = {Pen Software},
+    year         = {1992},
+    month        = {11},
+    day          = {10},
+    pages        = {202--203},
 }
 
-% Praca magisterska.
-@mastersthesis{wozniak2018,
-    author = {Woźniak, Piotr},
-    title  = {{P}rogramowanie kwadratowe w usuwaniu efektu rozmycia ruchu w fotografii cyfrowej},
-    school = {Wydział Elektroniki i Technik Informacyjnych, Politechnika Warszawska},
-    year   = {2018}
+% [11] GO Corporation (1991). “PenPoint Demonstration 1991”
+% https://www.youtube.com/watch?v=TpzgenLZcok
+%@online{godemo1991,
+@conference{godemo1991,
+    author       = {{GO Corporation}},
+    title        = {PenPoint Demonstration 1991},
+    url          = {youtu.be/TpzgenLZcok},
+    year         = {1991},
 }
 
-% Nieopublikowany artykuł, dostępny np. tylko w internecie.
-@unpublished{koons2005,
-    author = {Koons, Robert C.},
-    title  = {{S}obel on {G\"o}del’s {O}ntological {P}roof},
-    note   = {Dostęp zdalny (25.04.2019): \url{http://www.robkoons.net/media/69b0dd04a9d2fc6dffff80b4ffffd524.pdf}},
-    year   = {2005}
+% [5] Simon Schubiger, private correspondence, “PenPoint revival after more than 20 Years” 12 May 2015
+% https://www.youtube.com/watch?v=5fuCO50Y174
+@online{schubiger2015,
+    author       = {Simon Schubiger},
+    title        = {private correspondence, PenPoint revival after more than 20 Years},
+    url          = {youtu.be/5fuCO50Y174},
+    year         = {2015},
+    month        = {5},
+    day          = {12},
 }
 
-% Źródło innego typu, np. repozytorium na GitHubie.
-@misc{dcp19,
-    author       = {Brodzki, Artur M.},
-    title        = {{I}mplementation of own steganography protocol {DCP}-19, loosely based on {HICCUPS}},
-    howpublished = {Dostęp zdalny (14.03.2019): \url{https://github.com/ArturB/DCP-19}},
-    year         = {2019}
+% [6] “QEMU’s documentation”
+% https://qemu.readthedocs.io/en/v6.2.0/
+@online{qemu2022,
+    author       = {{The QEMU Project Developers}},
+    title        = {QEMU's documentation},
+    year         = {2022},
+    url          = {qemu.readthedocs.io/en/v6.2.0/},
+}
+
+% [7] GO Corporation (1992). PenPoint Development Tools. Reading, MA:
+% Addison-Wesley. ISBN 0-201-60861-8.
+@book{godevtools,
+    author       = {{GO Corporation}},
+    title        = {PenPoint Development Tools},
+    year         = {1992},
+    isbn         = {0-201-60861-8},
+}
+
+@online{libvirt,
+    author = {{The libvirt Project Developers}},
+    title  = {Domain XML format},
+    url    = {libvirt.org/formatdomain.html},
+    year   = {2022},
+}
+
+% TODO
+@manual{synapticsinterfacing,
+    author = {{Synaptics, Inc.}},
+    title  = {Synaptics TouchPad Interfacing Guide},
+    year   = {2001},
+}
+
+@online{ps2interface,
+    author = {Adam Chapweske},
+    title  = {The PS/2 Mouse Interface},
+    url    = {isdaman.com/alsos/hardware/mouse/ps2interface.htm},
+    year   = {2001},
 }
