--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,41 @@
+% TODO
+%
+% opisać rozwiązanie
+% bibliografia
+
+% stopień schubigera
+% ?podział na rozdziały
+
+% poprawić conclusions/further works
+% dopisać ostatni rozdział
+% sprawdzić co robi skalowanie
+% dodać przywracanie ze spania
+% 
+
+
+% 
+% poradnik dyplomanta
+% duszyńska
+% 
+% bibliografia:
+% dokumenty z okolic qemu
+% bardziej ogólnych kawałków, np. o sterownikach synaptic
+% inne ? emulacji innych komputerów (archive.org?)
+% emulatory arcade-ów
+% materiał do poczytania?
+% 
+% accessed on, http czy https
+% wydawca, miejsce wydania
+% 
+% 
+% summary i conclusion w jedno
+% przejrzeć stare
+% 
+% 
+% repo git qemu, readme/strona, inżynierka
+% 
+
+
 %-----------------------------------------------
 %  Engineer's & Master's Thesis Template
 %  Copyleft by Artur M. Brodzki & Piotr Woźniak
@@ -13,6 +51,67 @@
 \graphicspath{{tex/img/}} % Katalog z obrazkami.
 \addbibresource{bibliografia.bib} % Plik .bib z bibliografią
 
+\usepackage{lstautogobble}
+\lstset{
+    aboveskip=10pt, %?
+    autogobble=true,
+    %basicstyle=\ttfamily,
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,
+    breaklines=true,
+    captionpos=b,
+    columns=flexible,
+    consecutivenumbers=false,
+    inputpath={tex/code/},
+    keepspaces=true,
+    keywordstyle=\color{blue},
+    numbers=left,
+    showspaces=false,
+    showstringspaces=false,
+    stringstyle=\color{green},
+    tabsize=4,
+}
+
+\newenvironment{codeblock} {
+    \begin{addmargin}[12mm]{0mm}
+} {
+    \end{addmargin}
+}
+%\newenvironment{codeblock} {
+%    \begin{minipage}{\linewidth}
+%        \begin{addmargin}[8mm]{0mm}
+%} {
+%        \end{addmargin}
+%    \end{minipage}
+%}
+
+%\newcommand{\mylstinput}[4] {%
+%    \begin{minipage}{\linewidth}
+%        \begin{addmargin}[8mm]{0mm}
+%            %\lstinputlisting[#1]{#2}
+%            \lstinputlisting[
+%                caption=#1,
+%                langauge=#2,
+%                linerange=#3,
+%                aboveskip=10pt, %?
+%                basicstyle=\ttfamily, %\footnotesize,
+%                breakatwhitespace=false,
+%                breaklines=true,
+%                columns=flexible,
+%                keepspaces=true,
+%                keywordstyle=\color{blue},
+%                numbers=left,
+%                showspaces=false,
+%                showstringspaces=false,
+%                stringstyle=\color{green},
+%                tabsize=2,
+%            ]{#4}
+%        \end{addmargin}
+%    \end{minipage}
+%}
+
+\usepackage{fancyvrb}
+
 %-------------------------------------------------------------
 % Wybór wydziału:
 %  \facultyeiti: Wydział Elektroniki i Technik Informacyjnych
@@ -24,35 +123,29 @@
 %-------------------------------------------------------------
 \facultyeiti    % Wydział Elektroniki i Technik Informacyjnych
 \EngineerThesis % Praca inżynierska
-\langpol % Praca w języku polskim
+\langeng        % Praca w języku polskim
 
 \begin{document}
 
 %------------------
 % Strona tytułowa
 %------------------
-\instytut{XXXXXX}
-\kierunek{XXXXXX}
-\specjalnosc{XXXXXX}
+\instytut{Computer Science}
+\kierunek{Computer Science}
+\specjalnosc{Computer Systems and Networks}
+% TODO
 \title{
-    Niepotrzebnie długi i skomplikowany tytuł pracy \\
-    trudny do przeczytania, zrozumienia i wymówienia
+    Extending QEMU emulator to emulate PenPointOS
 }
-% Title in English for English theses
-% In English theses, you may remove this command
-\engtitle{
-    Unnecessarily long and complicated thesis' title \\
-    difficult to read, understand and pronounce
-}
+
 % Title in Polish for English theses
 % Use it only in English theses
 \poltitle{
-    Niepotrzebnie długi i skomplikowany tytuł pracy \\
-    trudny do przeczytania, zrozumienia i wymówienia
+    Rozbudowa emulatora QEMU do celów emulacji systemu PenPointOS
 }
-\author{\{Imię i Nazwisko\}}
-\album{XXXXXX}
-\promotor{XXXXXX}
+\author{\{Piotr Kochański\}}
+\album{289372}
+\promotor{Piotr Gawrysiak, PhD, DSc}
 \date{\the\year}
 \maketitle
 
@@ -61,16 +154,46 @@
 % English abstract if \langeng is set
 %-------------------------------------
 \cleardoublepage % Zaczynamy od nieparzystej strony
-\abstract \lipsum[1-3]
-\keywords XXX, XXX, XXX
+
+\abstract
+The aim of this work is to run a copy of the PenPoint operating system on
+modern hardware in a way that would allow us to reasonably use it with
+a comfortable performance, and describe the process of achieving this.
+
+The beginning of this work is concerned with what PenPointOS is and its
+importance. The main portion is split in two parts: the first part describes
+the initial attempt at creating a patch for QEMU emulator that would allow
+running a version for a NCR 3125 tablet directly; the second shows steps to
+running a DOS version of PenPointOS installed in FreeDOS on QEMU and
+VirtualBox, as well as modifying QEMU source code to support graphics tablet in
+PenPoint.
+
+\keywords
+PenPointOS, QEMU, JPC, FreeDOS, pen computing, retro computing, emulation,
+virtualization
 
 %----------------------------------------
 % Streszczenie po angielsku dla \langpol
 % Polish abstract if \langeng is set
 %----------------------------------------
 \clearpage
-\secondabstract \kant[1-3]
-\secondkeywords XXX, XXX, XXX
+
+\secondabstract
+Celem tej pracy było uruchomienie systemu operacyjnego PenPoint na współczesnym
+sprzęcie komputerowym, w ten sposób aby dało się z niego korzystać z komfortową
+wydajnością, i opisać proces w jaki zostało to osiągnięte.
+
+Początek tej pracy jest poświęcony opisowi czym PenPointOS jest i jego znaczeniu
+w historii komputerów.  Główna część jest podzielona na dwie części: pierwsza
+opisuje początkową próbę stworzenia patcha dla emulatora QEMU, który by pozwolił
+na uruchomienie wersji przeznaczonej dla tabletu NCR 3125 bezpośrednio; druga
+pokazuje proces uruchomienia wersji PenPoint dla DOSa zainstalowanej wewnątrz
+środowiska FreeDOS na emulatorach QEMU i VirtualBox, a także modyfikacji kodu
+źródłowego QEMU w celu obsługi tabletu graficznego w PenPoint.
+
+\secondkeywords
+PenPointOS, QEMU, JPC, FreeDOS, komputery rysikowe, retro komputery, emulacja,
+virtualizacja
 
 \pagestyle{plain}
 
@@ -86,14 +209,12 @@
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \pagestyle{headings}
 
-\input{tex/1-wstep}         % Wygodnie jest trzymać każdy rozdział w osobnym pliku.
-\input{tex/2-de-finibus}    % Umożliwia to również łatwą migrację do nowej wersji szablonu:
-\input{tex/3-code-listings} % zazwyczaj wystarczy podmienić plik src/wut-thesis.cls
-
- % Można też pisać rozdziały w jednym pliku.
-\clearpage % Zawsze zaczynamy rozdział od nowej strony
-\section{Summatio}
-\lipsum[4-10]
+\input{tex/01-motivation}
+\input{tex/02-goal}
+\input{tex/03-modifying-qemu}
+\input{tex/04-running-penpointos-on-freedos}
+\input{tex/05-summary}
+\input{tex/06-conclusions}
 
 %---------------
 % Bibliografia
@@ -108,10 +229,11 @@
 % generuje właściwy tytuł sekcji, w zależności od języka.
 % Makro \acronym dodaje skrót/symbol do listy,
 % zapewniając podstawowe formatowanie.
+% TODO
 \acronymlist
-\acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
-\acronym{PW}{Politechnika Warszawska}
-\acronym{WEIRD}{ang. \emph{Western, Educated, Industrialized, Rich and Democratic}}
+%\acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
+%\acronym{PW}{Politechnika Warszawska}
+%\acronym{WEIRD}{ang. \emph{Western, Educated, Industrialized, Rich and Democratic}}
 \vspace{0.8cm}
 
 %--------------------------------------
@@ -120,10 +242,10 @@
 \pagestyle{plain}
 
 \listoffigurestoc    % Spis rysunków.
-\vspace{1cm}         % vertical space
-\listoftablestoc     % Spis tabel.
-\vspace{1cm}         % vertical space
-\listofappendicestoc % Spis załączników
+%\vspace{1cm}         % vertical space
+%\listoftablestoc     % Spis tabel.
+%\vspace{1cm}         % vertical space
+%\listofappendicestoc % Spis załączników
 
 %-------------
 % Załączniki
@@ -133,29 +255,29 @@
 \captionsetup[figure]{list=no}
 \captionsetup[table]{list=no}
 
-% Załącznik 1
-\clearpage
-\appendix{Nazwa załącznika 1}
-\lipsum[1-3]
-\begin{figure}[!h]
-	\centering \includegraphics[width=0.5\linewidth]{logopw2.png}
-	\caption{Obrazek w załączniku.}
-\end{figure}
-\lipsum[4-7]
-
-% Załącznik 2
-\clearpage
-\appendix{Nazwa załącznika 2}
-\lipsum[1-2]
-\begin{table}[!h] \centering
-    \caption{Tabela w załączniku.}
-    \begin{tabular} {| c | c | r |} \hline
-        Kolumna 1       & Kolumna 2 & Liczba \\ \hline\hline
-        cell1           & cell2     & 60     \\ \hline
-        \multicolumn{2}{|r|}{Suma:} & 123,45 \\ \hline
-    \end{tabular}
-\end{table}
-\lipsum[3-4]
+%% Załącznik 1
+%\clearpage
+%\appendix{Nazwa załącznika 1}
+%\lipsum[1-3]
+%\begin{figure}[!h]
+%	\centering \includegraphics[width=0.5\linewidth]{logopw2.png}
+%	\caption{Obrazek w załączniku.}
+%\end{figure}
+%\lipsum[4-7]
+%
+%% Załącznik 2
+%\clearpage
+%\appendix{Nazwa załącznika 2}
+%\lipsum[1-2]
+%\begin{table}[!h] \centering
+%    \caption{Tabela w załączniku.}
+%    \begin{tabular} {| c | c | r |} \hline
+%        Kolumna 1       & Kolumna 2 & Liczba \\ \hline\hline
+%        cell1           & cell2     & 60     \\ \hline
+%        \multicolumn{2}{|r|}{Suma:} & 123,45 \\ \hline
+%    \end{tabular}
+%\end{table}
+%\lipsum[3-4]
 
 % Używając powyższych spisów jako szablonu,
 % możesz dodać również swój własny wykaz,
