Add new entries to biblatex

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -2,8 +2,9 @@
 % Addison Wesley Pub. Co. ISBN 0-201-57763-1.
 @book{carr1991,
     author    = {Robert Carr and Dan Shafer},
-    title     = {The power of PenPoint},
+    title     = {{The power of PenPoint}},
     publisher = {Addison-Wesley Pub. Co.},
+    address   = {Reading, MA},
     year      = {1991},
     isbn      = {0-201-57763-1},
 }
@@ -12,29 +13,32 @@
 % https://randoc.wordpress.com/2014/05/29/ncr-3125/ https://archive.ph/wip/3OR5N
 @online{hohl2014,
     author       = {Fritz Hohl},
-    title        = {NCR 3125},
+    title        = {{NCR 3125}},
     year         = {2014},
     month        = {5},
     day          = {29},
     url          = {randoc.wordpress.com/2014/05/29/ncr-3125/},
+    note         = {Accessed on 20.01.2023},
 }
 
 % [3] McDonald, Damian “'System 3125' tablet computer with accessories” May 2011
 % https://collection.maas.museum/object/416483 https://archive.ph/wip/S5wUv
 @online{mcdonald2011,
     author       = {Damian McDonald},
-    title        = {System 3125' tablet computer with accessories},
+    title        = {{System 3125' tablet computer with accessories}},
     year         = {2011},
     month        = {5},
-    url          = {collection.maas.museum/object/416483}
+    url          = {collection.maas.museum/object/416483},
+    note         = {Accessed on 20.01.2023},
 }
 
 % [4] Stengel, Steven “NCR-3125”, Steve's Old Computer Museum
 % https://oldcomputers.net/ncr-3125.html https://archive.ph/anzej
 @online{stengel,
     author       = {Steven Stengel},
-    title        = {NCR-3125},
-    url          = {oldcomputers.net/ncr-3125.html}
+    title        = {{NCR-3125}},
+    url          = {oldcomputers.net/ncr-3125.html},
+    note         = {Accessed on 20.01.2023},
 }
 
 % [8] Hoeven, Jeffrey van der; Lohman, Bram; Verdegem, Remco (11 December 2007).
@@ -42,9 +46,9 @@
 % International Journal of Digital Curation.
 @article{hoeven2007,
     author       = {Jeffrey van der Hoeven and Bram Lohman and Remco Verdegem},
-    title        = {
+    title        = {{
         Emulation for Digital Preservation in Practice: The Results
-    },
+    }},
     journal      = {International Journal of Digital Curation},
     year         = {2007},
     month        = {12},
@@ -55,7 +59,7 @@
 % https://books.google.pl/books?id=3YYkmZlpAuoC
 @article{brown1993,
     author       = {Bruce Brown},
-    title        = {Pen Operating Systems},
+    title        = {{Pen Operating Systems}},
     year         = {1993},
     month        = {10},
     day          = {12},
@@ -66,7 +70,7 @@
 % https://books.google.pl/books?id=18wFKrkDdM0C
 @article{brown1992,
     author       = {Bruce Brown},
-    title        = {Pen Software},
+    title        = {{Pen Software}},
     year         = {1992},
     month        = {11},
     day          = {10},
@@ -78,57 +82,65 @@
 %@online{godemo1991,
 @conference{godemo1991,
     author       = {{GO Corporation}},
-    title        = {PenPoint Demonstration 1991},
+    title        = {{PenPoint Demonstration 1991}},
     url          = {youtu.be/TpzgenLZcok},
     year         = {1991},
+    note         = {Accessed on 20.01.2023},
 }
 
 % [5] Simon Schubiger, private correspondence, “PenPoint revival after more than 20 Years” 12 May 2015
 % https://www.youtube.com/watch?v=5fuCO50Y174
 @online{schubiger2015,
     author       = {Simon Schubiger},
-    title        = {private correspondence, PenPoint revival after more than 20 Years},
+    title        = {{private correspondence, PenPoint revival after more than 20 Years}},
     url          = {youtu.be/5fuCO50Y174},
     year         = {2015},
     month        = {5},
     day          = {12},
+    note         = {Accessed on 20.01.2023},
 }
 
 % [6] “QEMU’s documentation”
 % https://qemu.readthedocs.io/en/v6.2.0/
 @online{qemu2022,
     author       = {{The QEMU Project Developers}},
-    title        = {QEMU's documentation},
+    title        = {{QEMU's documentation}},
     year         = {2022},
     url          = {qemu.readthedocs.io/en/v6.2.0/},
+    note         = {Accessed on 20.01.2023},
 }
 
 % [7] GO Corporation (1992). PenPoint Development Tools. Reading, MA:
 % Addison-Wesley. ISBN 0-201-60861-8.
+% isbn         = {0-201-60861-8},
 @book{godevtools,
     author       = {{GO Corporation}},
-    title        = {PenPoint Development Tools},
+    title        = {{PenPoint Development Tools}},
     year         = {1992},
-    isbn         = {0-201-60861-8},
+    publisher    = {Addison-Wesley Pub. Co.},
+    address      = {Reading, MA},
+    isbn         = {978-0201608618},
 }
 
 @online{libvirt,
     author = {{The libvirt Project Developers}},
-    title  = {Domain XML format},
+    title  = {{Domain XML format}},
     url    = {libvirt.org/formatdomain.html},
     year   = {2022},
+    note   = {Accessed on 20.01.2023},
 }
 
 % TODO
 @manual{synapticsinterfacing,
     author = {{Synaptics, Inc.}},
-    title  = {Synaptics TouchPad Interfacing Guide},
+    title  = {{Synaptics TouchPad Interfacing Guide}},
     year   = {2001},
 }
 
 @online{ps2interface,
     author = {Adam Chapweske},
-    title  = {The PS/2 Mouse Interface},
+    title  = {{The PS/2 Mouse Interface}},
     url    = {isdaman.com/alsos/hardware/mouse/ps2interface.htm},
     year   = {2001},
+    note   = {Accessed on 20.01.2023},
 }
