--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -144,3 +144,42 @@
     year   = {2001},
     note   = {Accessed on 20.01.2023},
 }
+
+@book{barbariansbillgates,
+    author      = {Marlin Eller and Jennifer Edstrom},
+    title       = {{Barbarians Led by Bill Gates}},
+    year        = {1998},
+    publisher   = {Henry Holt and Co.},
+    address     = {New York City, NY},
+    isbn        = {0-8050-5755-2},
+}
+
+@book{startupadv,
+    author      = {Jerry Kaplan},
+    title       = {{Startup: A Silicon Valley Adventure}},
+    year        = {1996},
+    publisher   = {Penguin Books},
+    address     = {New York City, NY},
+    isbn        = {0-14-025731-4},
+}
+
+@misc{vasut2017,
+    title           = {{Adding new architecture to QEMU}},
+    author          = {Marek Vašut},
+    howpublished    = "\url{events17.linuxfoundation.org/sites/events/files/slides/ossj-2017.pdf}",
+    year            = 2017,
+    note            = "Accessed on 20.01.2023",
+}
+
+@online{win95web,
+    title   = {{Windows 95 emulated in the browser via DOSBox}},
+    author  = {Andrea Faulds},
+    url     = {archive.org/details/win95_in_dosbox},
+    year    = {2021},
+    note    = {Accessed on 20.01.2023},
+}
+
+% https://archive.org/details/softwarelibrary_msdos_games?tab=about
+% https://archive.org/details/win95_in_dosbox
+% może stąd https://www.researchgate.net/publication/315718238_Annotated_Bibliography_in_On-line_Character_Recognition_Pen_Computing_Gesture_User_Interfaces_and_Tablet_and_Touch_Computers
+% dokumentacja qemu
